--- a/src/Web/RecipeBook.Web/Views/Home/Search.cshtml
+++ b/src/Web/RecipeBook.Web/Views/Home/Search.cshtml
@@ -19,4 +19,5 @@
 @section Scripts {
     <script src="~/js/homeSearchView.js" asp-append-version="true"></script>
     <script src="~/js/sideBarView.js" asp-append-version="true"></script>
+    <script src="~/js/fiveStarsVote.js" asp-append-version="true"></script>
 }
