--- a/src/Web/RecipeBook.Web/Views/Recipe/Create.cshtml
+++ b/src/Web/RecipeBook.Web/Views/Recipe/Create.cshtml
@@ -9,7 +9,7 @@
 
         <input asp-for=@Model.Id class="form-control" type="hidden" />
         <input asp-for=@Model.AllRecipeTypes class="form-control" type="hidden" />
-        <input asp-for=@Model.ImagePath class="form-control" type="hidden" id="image_Path"/>
+        <input asp-for=@Model.ImagePath class="form-control" type="hidden" id="image_Path" />
 
         <div class="row">
             <div class="col-md-8 col-lg-7 pb-4">
@@ -44,7 +44,26 @@
                                         </select>
                                         <span asp-validation-for="@Model.RecipeType.Id" class="text-danger"></span>
                                     </div>
-
+                                    <div class='rating-stars mb-0' title="Taste:">
+                                        <ul id='stars' data-value='@Model.Id,3'>
+                                            <li class='star' title='Poor' data-value='1'>
+                                                <i class='fa fa-star fa-fw'></i>
+                                            </li>
+                                            <li class='star' title='Fair' data-value='2'>
+                                                <i class='fa fa-star fa-fw'></i>
+                                            </li>
+                                            <li class='star' title='Good' data-value='3'>
+                                                <i class='fa fa-star fa-fw'></i>
+                                            </li>
+                                            <li class='star' title='Excellent' data-value='4'>
+                                                <i class='fa fa-star fa-fw'></i>
+                                            </li>
+                                            <li class='star' title='WOW!!!' data-value='5'>
+                                                <i class='fa fa-star fa-fw'></i>
+                                            </li>
+                                            <li class="list-inline-item"><p class="text-muted" id="taste_rate"></p></li>
+                                        </ul>
+                                    </div>
                                     <div class="form-inline">
                                         <label asp-for="@Model.LastCooked" class="control-label">
                                             Last cooked:
@@ -87,7 +106,7 @@
                     <label asp-for="@Model.Text" class="control-label">
                         Description:
                     </label>
-                    <input asp-for="@Model.Text" class="form-control" />
+                    <textarea asp-for="@Model.Text" class="form-control"></textarea>
                     <span asp-validation-for="@Model.Text" class="text-danger"></span>
                 </div>
             </div>
@@ -130,4 +149,5 @@
     <script src="~/js/recipeCreateView.js" asp-append-version="true"></script>
     <script src="~/js/cropImage.js" asp-append-version="true"></script>
     <script src="~/js/dragDropImage.js" asp-append-version="true"></script>
+    <script src="~/js/fiveStarsVote.js" asp-append-version="true"></script>
 }
