--- a/src/Web/RecipeBook.Web/Views/Recipe/Edit.cshtml
+++ b/src/Web/RecipeBook.Web/Views/Recipe/Edit.cshtml
@@ -1,5 +1,165 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
+﻿@model RecipeBook.Web.ViewModels.Recipe.RecipeViewModel
+
+
+<form id="keyForm" method="Post"></form>
+
+<div class="container">
+    <form asp-controller="Recipe" asp-action="Edit" method="post">
+        <div asp-validation-summary="All" class="text-danger"></div>
+
+        <input asp-for=@Model.Id class="form-control" type="hidden" />
+        <input asp-for=@Model.AllRecipeTypes class="form-control" type="hidden" />
+        <input asp-for=@Model.ImagePath class="form-control" type="hidden" id="image_Path" />
+
+        <div class="row">
+            <div class="col-md-8 col-lg-7 pb-4">
+                <div class="card card-inverse card-primary" id="image_box" data-value="@Model.Id">
+                    <img id="uploaded_image" class="img-fluid" src="@Model.ImagePath" alt="Responsive image" draggable="true">
+                </div>
+            </div>
+            <div class="col-md-4 col-lg-5">
+                <div class="row h-100">
+                    <div class="col-md-12 col-lg-12 h-100 pb-4">
+                        <div class="card card-inverse bg-transparent h-100">
+                            <div class="row h-75">
+                                <div class="col-md-12 h-100 p-4">
+                                    <div class="form-group">
+                                        <label asp-for="@Model.Name" class="control-label">
+                                            Title:
+                                        </label>
+                                        <input asp-for="@Model.Name" class="form-control" value="@Model.Name" />
+                                        <span asp-validation-for=@Model.Name class="text-danger"></span>
+                                    </div>
+                                    <div class="form-group">
+                                        <label asp-for="@Model.RecipeType.Id" class="control-label">
+                                            Recipe Type:
+                                        </label>
+                                        <select asp-for="@Model.RecipeType.Id" class="form-control def">
+                                            @{
+                                                foreach (var item in @Model.AllRecipeTypes)
+                                                {
+                                                    if (item.Id == Model.RecipeType.Id)
+                                                    {
+                                                        <option value=@item.Id selected="selected">@item.Name</option>
+                                                    }
+                                                    {
+                                                        <option value=@item.Id>@item.Name</option>
+                                                    }
+
+                                                }
+                                            }
+                                        </select>
+                                        <span asp-validation-for="@Model.RecipeType.Id" class="text-danger"></span>
+                                    </div>
+                                    <div class='rating-stars mb-0' title="Taste:">
+                                        <ul id='stars' data-value='@Model.Id,3'>
+                                            <li class='star' title='Poor' data-value='1'>
+                                                <i class='fa fa-star fa-fw'></i>
+                                            </li>
+                                            <li class='star' title='Fair' data-value='2'>
+                                                <i class='fa fa-star fa-fw'></i>
+                                            </li>
+                                            <li class='star' title='Good' data-value='3'>
+                                                <i class='fa fa-star fa-fw'></i>
+                                            </li>
+                                            <li class='star' title='Excellent' data-value='4'>
+                                                <i class='fa fa-star fa-fw'></i>
+                                            </li>
+                                            <li class='star' title='WOW!!!' data-value='5'>
+                                                <i class='fa fa-star fa-fw'></i>
+                                            </li>
+                                            <li class="list-inline-item"><p class="text-muted" id="taste_rate"></p></li>
+                                        </ul>
+                                    </div>
+                                    <div class="form-inline">
+                                        <label asp-for="@Model.LastCooked" class="control-label">
+                                            Last cooked:
+                                        </label>
+                                        <input type="datetime-local"  asp-for="@Model.LastCooked" class="form-control" value="@Model.LastCooked.ToString("s")"/>
+                                        <span asp-validation-for="@Model.LastCooked" class="text-danger"></span>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="row h-15">
+                                <div class="col-sm-6  col-lg-12 p-4">
+                                    <i class="far fa-clock"></i>60 min preparation time
+                                </div>
+                            </div>
+                            <div class="row h-5">
+                                <div class="col-sm-6  col-lg-12 pl-4 pr-4">
+                                    <button type="button" class="btn btn-sm btn-secondary rounded-pill disabled"><i class="fas fa-edit"></i>Edit</button>
+                                </div>
+                                <div class="col-sm-6  col-lg-12 pl-4 pr-4">
+                                    <button type="button" class="btn btn-sm btn-success rounded-pill disabled"><i class="fas fa-check-circle"></i>Cooked Today</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+        <div class="row pb-4">
+            <div class="col">
+                <div class="card card-inverse card-success p-4">
+                    <p>Ingredients:</p>
+                    <textarea class="form-control">Write ingredients here...</textarea>
+                </div>
+            </div>
+        </div>
+        <div class="row pb-4">
+            <div class="col">
+                <div class="card card-inverse card-success p-4">
+                    <label asp-for="@Model.Text" class="control-label">
+                        Description:
+                    </label>
+                    <textarea asp-for="@Model.Text" class="form-control" value="@Model.Text"></textarea>
+                    <span asp-validation-for="@Model.Text" class="text-danger"></span>
+                </div>
+            </div>
+        </div>
+        <div class="modal fade" id="modal" tabindex="-1" role="dialog" aria-labelledby="modalLabel" aria-hidden="true">
+            <div class="modal-dialog modal-lg" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title">Crop Image Before Upload</h5>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">×</span>
+                        </button>
+                    </div>
+                    <div class="modal-body">
+                        <div class="img-container">
+                            <div class="row">
+                                <div class="col-md-8">
+                                    <img src="" id="sample_image" />
+                                </div>
+                                <div class="col-md-4">
+                                    <div class="preview"></div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" id="crop" class="btn btn-primary">Crop</button>
+                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="form-inline">            
+            <button type="submit" class="btn btn-sm btn-success rounded-pill">
+                <i class="fas fa-check-circle"></i>Save
+            </button>
+            <button type="reset" class="btn btn-sm btn-secondary rounded-pill">
+                <i class="fas fa-times-circle"></i>Reset
+            </button>
+        </div>
+    </form>
+</div>
+
+@section Scripts {
+    <script src="~/js/recipeCreateView.js" asp-append-version="true"></script>
+    <script src="~/js/cropImage.js" asp-append-version="true"></script>
+    <script src="~/js/dragDropImage.js" asp-append-version="true"></script>
+    <script src="~/js/fiveStarsVote.js" asp-append-version="true"></script>
 }
