--- a/src/Web/RecipeBook.Web/Views/Shared/_Layout.cshtml
+++ b/src/Web/RecipeBook.Web/Views/Shared/_Layout.cshtml
@@ -29,6 +29,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Recipe" asp-action="Create"><span class="badge rounded-pill badge-secondary p-1">New</span>Recipe</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Ingredients" asp-action="Index">Ingredients</a>
+                        </li>
                     </ul>
                 </div>
             </div>
