--- a/src/Web/RecipeBook.Web/Views/Recipe/Index.cshtml
+++ b/src/Web/RecipeBook.Web/Views/Recipe/Index.cshtml
@@ -71,10 +71,13 @@
             <div class="col">
                 <div class="card card-inverse card-success p-4">
                     <p>Ingredients:</p>
-                    @*@foreach (var item in Model.IngredientSet.IngredientSetItems)
+                    @if (Model.IngredientSet !=null)
+                    {
+                        foreach (var item in Model.IngredientSet.IngredientSetItems)
                         {
                             <p>.@item.QTY @item.Ingredient.Name</p>
-                        }*@
+                        }
+                    }
                 </div>
             </div>
         </div>
