--- a/src/Web/RecipeBook.Web/Views/Shared/Components/SideBarFilter/Default.cshtml
+++ b/src/Web/RecipeBook.Web/Views/Shared/Components/SideBarFilter/Default.cshtml
@@ -7,38 +7,40 @@
         </header>
         <div class="filter-content">
             <div class="card-body">
-                    @if (!string.IsNullOrEmpty(Model.SearchedText))
-                    {
-                        <input class="search-form form-control" placeholder="@Model.SearchedText" id="searchBox" type="text" value="@Model.SearchedText">
-                    }
-                    else
-                    {
-                        <input class="search-form form-control" placeholder="Search..." id="searchBox" type="text">
-                    }
+                @if (!string.IsNullOrEmpty(Model.SearchedText))
+                {
+                    <input class="search-form form-control" placeholder="@Model.SearchedText" id="searchBox" type="text" value="@Model.SearchedText">
+                }
+                else
+                {
+                    <input class="search-form form-control" placeholder="Search..." id="searchBox" type="text">
+                }
             </div>
         </div>
     </article>
-    <article class="card-group-item">
-        <header class="card-header">
-            <h6 class="title">Filter by recipe type </h6>
-        </header>
-        <div class="filter-content">
-            <div class="card-body">
-                <form>
-                    <div class='collapse show' @*id=RecipeTypes*@>
-                        @foreach (var item in Model.RecipeTypes)
-                        {
-                            <label class="form-check ml-2">
-                                <input class="form-check-input" type="checkbox" value="" id= '@item.Id' checked="@item.Checked"  name='Recipe_Type_Checkbox_ +@item.Name'>
-                                <span class="form-check-label">
-                                    @item.Name
-                                </span>
-                            </label>
-                        }
-                    </div>
-                </form>
-            </div>
-    </article>
+    @if (Model.Mode == RecipeBook.Web.ViewModels.Home.SearchDataModeEnum.Recipe)
+    {
+        <article class="card-group-item">
+            <header class="card-header">
+                <h6 class="title">Filter by recipe type </h6>
+            </header>
+            <div class="filter-content">
+                <div class="card-body">
+                    <form>
+                        <div class='collapse show' @*id=RecipeTypes*@>
+                            @foreach (var item in Model.RecipeTypes)
+                            {
+                                <label class="form-check ml-2">
+                                    <input class="form-check-input" type="checkbox" value="" id='@item.Id' checked="@item.Checked" name='Recipe_Type_Checkbox_ +@item.Name'>
+                                    <span class="form-check-label">
+                                        @item.Name
+                                    </span>
+                                </label>
+                            }
+                        </div>
+                    </form>
+                </div>
+        </article>}
     <article class="card-group-item">
         <header class="card-header">
             <h6 class="title">Filter by ingredients</h6>
