--- a/src/Web/RecipeBook.Web/wwwroot/css/site.css
+++ b/src/Web/RecipeBook.Web/wwwroot/css/site.css
@@ -127,3 +127,31 @@ input[readonly].form-control {
 .modal-lg {
     max-width: 1000px !important;
 }
+/*------------------------------------------------------*/
+/* Button circle Style */
+.btn-circle.btn-sm {
+    width: 30px;
+    height: 30px;
+    padding: 4px 0px;
+    border-radius: 15px;
+    font-size: 12px;
+    text-align: center;
+}
+
+.btn-circle.btn-md {
+    width: 50px;
+    height: 50px;
+    padding: 7px 10px;
+    border-radius: 25px;
+    font-size: 10px;
+    text-align: center;
+}
+
+.btn-circle.btn-xl {
+    width: 70px;
+    height: 70px;
+    padding: 10px 16px;
+    border-radius: 35px;
+    font-size: 12px;
+    text-align: center;
+} 
