1.Db changes - change QTY to QTYData add IsMainItem in IngredientsSetItem 2.Ingredient view, controller and scripts are added 3.IngredientsSet view models are simplified 4.IngredientsSet controller Create and Update implemented 5.AutocompleteSearchController is changed to be able to search in recipes or in ingredients

--- a/src/Web/RecipeBook.Web/Views/Home/ResultList.cshtml
+++ b/src/Web/RecipeBook.Web/Views/Home/ResultList.cshtml
@@ -31,7 +31,7 @@
                             <li class='star' title='WOW!!!' data-value='5'>
                                 <i class='fa fa-star fa-fw'></i>
                             </li>
-                            <li class="list-inline-item"><p class="text-muted" id="taste_rate"></p></li>
+                            <li class="list-inline-item"><p class="text-muted" id="taste_rate">(Taste rate:@item.TasteRate)</p></li>
                         </ul>
                     </div>
                     <p class="text-justify text-truncate" style="max-width: 200px;">
