--- a/src/Web/RecipeBook.Web/Views/Recipe/Index.cshtml
+++ b/src/Web/RecipeBook.Web/Views/Recipe/Index.cshtml
@@ -7,7 +7,7 @@
         <div class="row">
             <div class="col-md-8 col-lg-7 pb-4">
                 <div class="card card-inverse card-primary" id="image_box">
-                    <img class="img-fluid" src="@Model.ImagePath" alt="Responsive image" draggable="true">
+                    <img class="img-fluid" src="@Model.ImagePath" alt="Image" width="680" height="680" draggable="true">
                 </div>
             </div>
             <div class="col-md-4 col-lg-5">
@@ -23,7 +23,7 @@
                                         Recipe Type:<br />@Model.RecipeType.Name
                                     </h6>
                                     <div class='rating-stars mb-0' title="Taste:">
-                                        <ul id='stars' data-value='@Model.Id,3'>
+                                        <ul id='stars' data-value='@Model.Id,@Model.TasteRate'>
                                             <li class='star' title='Poor' data-value='1'>
                                                 <i class='fa fa-star fa-fw'></i>
                                             </li>
@@ -39,7 +39,7 @@
                                             <li class='star' title='WOW!!!' data-value='5'>
                                                 <i class='fa fa-star fa-fw'></i>
                                             </li>
-                                            <li class="list-inline-item"><p class="text-muted" id="taste_rate"></p></li>
+                                            <li class="list-inline-item"><p class="text-muted" id="taste_rate">(Taste rate:@Model.TasteRate)</p></li>
                                         </ul>
                                     </div>
                                     <label asp-for="@Model.LastCooked" class="control-label">
@@ -55,7 +55,7 @@
                             </div>
                             <div class="row h-5">
                                 <div class="col-sm-6  col-lg-12 pl-4 pr-4">
-                                    <button type="submit" asp-action="Edit" method="Post" asp-route-id="@Model.Id" class="btn btn-sm btn-secondary rounded-pill"><i class="fas fa-edit"></i>Edit</button>
+                                    <button type="submit" asp-action="Edit" asp-route-id="@Model.Id" class="btn btn-sm btn-secondary rounded-pill"><i class="fas fa-edit"></i>Edit</button>
                                 </div>
                                 <div class="col-sm-6  col-lg-12 pl-4 pr-4">
                                     <button type="button" class="btn btn-sm btn-success rounded-pill" onclick="OnCookedTodayClick('@Model.Id')"><i class="fas fa-check-circle"></i>Cooked Today</button>
@@ -75,7 +75,7 @@
                     {
                         foreach (var item in Model.IngredientSet.IngredientSetItems)
                         {
-                            <p>.@item.QTY @item.Ingredient.Name</p>
+                            <p>.@item.QTYData @item.IngredientName</p>
                         }
                     }
                 </div>
