--- a/src/Web/RecipeBook.Web/Views/Recipe/Create.cshtml
+++ b/src/Web/RecipeBook.Web/Views/Recipe/Create.cshtml
@@ -15,7 +15,7 @@
         <div class="row">
             <div class="col-md-8 col-lg-7 pb-4">
                 <div class="card card-inverse card-primary" id="image_box" data-value="@Model.Id">
-                    <img id="uploaded_image" class="img-fluid" src="~/images/PlaceHolder680x680.jpg" alt="Responsive image" draggable="true">
+                    <img id="uploaded_image" class="img-fluid" src="~/images/PlaceHolder680x680.jpg" alt="Image" width="680" height="680" draggable="true">
                 </div>
             </div>
             <div class="col-md-4 col-lg-5">
@@ -46,7 +46,7 @@
                                         <span asp-validation-for="@Model.RecipeType.Id" class="text-danger"></span>
                                     </div>
                                     <div class='rating-stars mb-0' title="Taste:">
-                                        <ul id='stars' data-value='@Model.Id,3'>
+                                        <ul id='stars' data-value='@Model.Id,0'>
                                             <li class='star' title='Poor' data-value='1'>
                                                 <i class='fa fa-star fa-fw'></i>
                                             </li>
@@ -62,7 +62,7 @@
                                             <li class='star' title='WOW!!!' data-value='5'>
                                                 <i class='fa fa-star fa-fw'></i>
                                             </li>
-                                            <li class="list-inline-item"><p class="text-muted" id="taste_rate"></p></li>
+                                            <li class="list-inline-item"><p class="text-muted" id="taste_rate">(Taste rate:@Model.TasteRate)</p></li>
                                         </ul>
                                     </div>
                                     <div class="form-inline">
