--- a/src/Web/RecipeBook.Web/Views/Home/ResultList.cshtml
+++ b/src/Web/RecipeBook.Web/Views/Home/ResultList.cshtml
@@ -3,7 +3,7 @@
 @{
     int elCount = Model.ResultItems.Count();
     if (elCount != 0)
-    {       
+    {
         foreach (var item in Model.ResultItems)
         {
             var currentImageSource = item.ImagePath;
@@ -14,8 +14,8 @@
                      title=@item.Name width="100" height="100">
                 <div class="media-body mr-3">
                     <h5 class="mt-0 mb-1"><a asp-controller="Recipe" asp-action="Index" asp-route-id="@item.Id">@item.Name</a></h5>
-                    <div class='rating-stars mb-0'title="Taste:">
-                        <ul id='stars' data-value='@item.Id,@item.TasteRate'>
+                    <div class='rating-stars mb-0 mt-0' title="Taste:">
+                        <ul id='TasteRateStars' data-value='@item.Id,@item.TasteRate'>
                             <li class='star' title='Poor' data-value='1'>
                                 <i class='fa fa-star fa-fw'></i>
                             </li>
@@ -34,7 +34,27 @@
                             <li class="list-inline-item"><p class="text-muted" id="taste_rate">(Taste rate:@item.TasteRate)</p></li>
                         </ul>
                     </div>
-                    <p class="text-justify text-truncate" style="max-width: 200px;">
+                    <div class='rating-stars mb-0 mt-0' title="Easy:">
+                        <ul id='EasyRateStars' data-value='@item.Id,@item.EasyRate'>
+                            <li class='star' title='Poor' data-value='1'>
+                                <i class='fa fa-star fa-fw'></i>
+                            </li>
+                            <li class='star' title='Fair' data-value='2'>
+                                <i class='fa fa-star fa-fw'></i>
+                            </li>
+                            <li class='star' title='Good' data-value='3'>
+                                <i class='fa fa-star fa-fw'></i>
+                            </li>
+                            <li class='star' title='Excellent' data-value='4'>
+                                <i class='fa fa-star fa-fw'></i>
+                            </li>
+                            <li class='star' title='WOW!!!' data-value='5'>
+                                <i class='fa fa-star fa-fw'></i>
+                            </li>
+                            <li class="list-inline-item"><p class="text-muted" id="easy_rate">(Easy rate:@item.EasyRate)</p></li>
+                        </ul>
+                    </div>
+                    <p class="text-justify text-truncate" style="max-width: 200px">
                         @item.Text
                     </p>
                 </div>
