--- a/src/Web/RecipeBook.Web/Views/Recipe/Index.cshtml
+++ b/src/Web/RecipeBook.Web/Views/Recipe/Index.cshtml
@@ -23,7 +23,7 @@
                                         Recipe Type:<br />@Model.RecipeType.Name
                                     </h6>
                                     <div class='rating-stars mb-0' title="Taste:">
-                                        <ul id='stars' data-value='@Model.Id,@Model.TasteRate'>
+                                        <ul id='TasteRateStars' data-value='@Model.Id,@Model.TasteRate'>
                                             <li class='star' title='Poor' data-value='1'>
                                                 <i class='fa fa-star fa-fw'></i>
                                             </li>
@@ -40,6 +40,26 @@
                                                 <i class='fa fa-star fa-fw'></i>
                                             </li>
                                             <li class="list-inline-item"><p class="text-muted" id="taste_rate">(Taste rate:@Model.TasteRate)</p></li>
+                                        </ul>
+                                    </div>
+                                    <div class='rating-stars mb-0 mt-0' title="Easy:">
+                                        <ul id='EasyRateStars' data-value='@Model.Id,@Model.EasyRate'>
+                                            <li class='star' title='Poor' data-value='1'>
+                                                <i class='fa fa-star fa-fw'></i>
+                                            </li>
+                                            <li class='star' title='Fair' data-value='2'>
+                                                <i class='fa fa-star fa-fw'></i>
+                                            </li>
+                                            <li class='star' title='Good' data-value='3'>
+                                                <i class='fa fa-star fa-fw'></i>
+                                            </li>
+                                            <li class='star' title='Excellent' data-value='4'>
+                                                <i class='fa fa-star fa-fw'></i>
+                                            </li>
+                                            <li class='star' title='WOW!!!' data-value='5'>
+                                                <i class='fa fa-star fa-fw'></i>
+                                            </li>
+                                            <li class="list-inline-item"><p class="text-muted" id="easy_rate">(Easy rate:@Model.EasyRate)</p></li>
                                         </ul>
                                     </div>
                                     <label asp-for="@Model.LastCooked" class="control-label">
