--- a/src/Web/RecipeBook.Web/wwwroot/css/site.css
+++ b/src/Web/RecipeBook.Web/wwwroot/css/site.css
@@ -78,6 +78,7 @@ body {
 .rating-stars ul {
     list-style-type: none;
     padding: 0;
+    margin: 0;
     -moz-user-select: none;
     -webkit-user-select: none;
 }
