--- a/src/Web/RecipeBook.Web/Views/Ingredients/Index.cshtml
+++ b/src/Web/RecipeBook.Web/Views/Ingredients/Index.cshtml
@@ -4,10 +4,10 @@
 
 <div class="container">
     <div class="row">
-        <div class="col-3">
+        <div class="col-sm-12 col-md-3 col-lg-3">
             @await Component.InvokeAsync("SideBarFilter", new { searchData = Model.SearchData })
         </div>
-        <div class="col-9" id="partialView">
+        <div class="col-sm-12 col-dm-9 col-lg-9" id="partialView">
             <partial name="IndexResultList" model="@Model" data="@Model" />
         </div>
     </div>
