1.Last cooked is added in search recipe 2."Ok" is replaced with "Back to recipe" in ingredients set screen 3.Recipe's create view is changed to view what is editable 4.Recipe's edit view is changed to hide disabled buttons

--- a/src/Web/RecipeBook.Web/Views/Home/ResultList.cshtml
+++ b/src/Web/RecipeBook.Web/Views/Home/ResultList.cshtml
@@ -16,6 +16,7 @@
 					<div class="row">
 						<div class="col-9">
 							<h5 class="mt-0 mb-1"><a asp-controller="Recipe" asp-action="Index" asp-route-id="@item.Id">@item.Name</a></h5>
+							<p class="mt-0 mb-1 text-muted">Last cooked: @item.LastCookedDays days</p>
 						</div>
 						@if (item.IsInMenu)
 						{
