--- a/src/Web/RecipeBook.Web/Views/IngredientsSet/IngredientsSetItemsList.cshtml
+++ b/src/Web/RecipeBook.Web/Views/IngredientsSet/IngredientsSetItemsList.cshtml
@@ -76,8 +76,8 @@
             <div class="form-inline align-items-end">
                 @if (Model.Mode == "Edit")
                 {
-                    <button type="submit" asp-controller="Recipe" asp-action="Edit" asp-route-id="@Model.RecipeId" formmethod="get" class="btn btn-sm btn-success rounded-pill">
-                        <i class="fas fa-check-circle"></i>Ok
+                    <button type="submit" asp-controller="Recipe" asp-action="Edit" asp-route-id="@Model.RecipeId" formmethod="get" class="btn btn-sm btn-primary rounded-pill">
+                        <i class="fas fa-arrow-circle-left"></i>Back to Recipe
                     </button>
                     <button type="submit" asp-action="Edit" class="btn btn-sm btn-success rounded-pill">
                         <i class="fas fa-check-circle"></i>Save
@@ -85,9 +85,9 @@
                     <button type="reset" class="btn btn-sm btn-secondary rounded-pill">
                         <i class="fas fa-undo"></i>Reset
                     </button>
-                    <button type="submit" asp-action="Delete" class="btn btn-sm btn-danger rounded-pill">
+                    @*<button type="submit" asp-action="Delete" class="btn btn-sm btn-danger rounded-pill">
                         <i class="fas fa-times-circle"></i>Delete
-                    </button>
+                    </button>*@
                 }
                 else
                 {
