--- a/src/Web/RecipeBook.Web/Views/Recipe/Create.cshtml
+++ b/src/Web/RecipeBook.Web/Views/Recipe/Create.cshtml
@@ -45,46 +45,6 @@
                                         </select>
                                         <span asp-validation-for="@Model.RecipeType.Id" class="text-danger"></span>
                                     </div>
-                                    <div class='rating-stars mb-0' title="Taste:">
-                                        <ul id='TasteRateStars' data-value='@Model.Id,0'>
-                                            <li class='star' title='Poor' data-value='1'>
-                                                <i class='fa fa-star fa-fw'></i>
-                                            </li>
-                                            <li class='star' title='Fair' data-value='2'>
-                                                <i class='fa fa-star fa-fw'></i>
-                                            </li>
-                                            <li class='star' title='Good' data-value='3'>
-                                                <i class='fa fa-star fa-fw'></i>
-                                            </li>
-                                            <li class='star' title='Excellent' data-value='4'>
-                                                <i class='fa fa-star fa-fw'></i>
-                                            </li>
-                                            <li class='star' title='WOW!!!' data-value='5'>
-                                                <i class='fa fa-star fa-fw'></i>
-                                            </li>
-                                            <li class="list-inline-item"><p class="text-muted" id="taste_rate">(Taste rate:@Model.TasteRate)</p></li>
-                                        </ul>
-                                    </div>
-                                    <div class='rating-stars mb-0' title="Easy:">
-                                        <ul id='EasyRateStars' data-value='@Model.Id,@Model.EasyRate'>
-                                            <li class='star' title='Poor' data-value='1'>
-                                                <i class='fa fa-star fa-fw'></i>
-                                            </li>
-                                            <li class='star' title='Fair' data-value='2'>
-                                                <i class='fa fa-star fa-fw'></i>
-                                            </li>
-                                            <li class='star' title='Good' data-value='3'>
-                                                <i class='fa fa-star fa-fw'></i>
-                                            </li>
-                                            <li class='star' title='Excellent' data-value='4'>
-                                                <i class='fa fa-star fa-fw'></i>
-                                            </li>
-                                            <li class='star' title='WOW!!!' data-value='5'>
-                                                <i class='fa fa-star fa-fw'></i>
-                                            </li>
-                                            <li class="list-inline-item"><p class="text-muted" id="easy_rate">(Easy rate:@Model.EasyRate)</p></li>
-                                        </ul>
-                                    </div>
                                     <div class="form-inline">
                                         <label asp-for="@Model.LastCooked" class="control-label">
                                             Last cooked:
@@ -93,47 +53,13 @@
                                         <span asp-validation-for="@Model.LastCooked" class="text-danger"></span>
                                     </div>
                                 </div>
-                            </div>
-                            <div class="row h-15">
-                                <div class="col-sm-6  col-lg-12 p-4">
-                                    <i class="far fa-clock"></i>60 min preparation time
-                                </div>
-                            </div>
-                            <div class="row h-5">
-                                <div class="col-sm-6  col-lg-12 pl-4 pr-4">
-                                    <button type="button" class="btn btn-sm btn-secondary rounded-pill" disabled><i class="fas fa-edit"></i>Edit</button>
-                                </div>
-                                <div class="col-sm-6  col-lg-12 pl-4 pr-4">
-                                    <button type="button" class="btn btn-sm btn-success rounded-pill" disabled><i class="fas fa-check-circle"></i>Cooked Today</button>
-                                </div>
-                            </div>
+                            </div>                        
                         </div>
                     </div>
                 </div>
             </div>
 
-        </div>
-        <div class="row pb-4">
-            <div class="col">
-                <div class="card card-inverse card-success p-4">
-                    <p>Ingredients:</p>
-                    <div class="col-4 pl-4 pr-4">
-                        <button type="button" class="btn btn-sm btn-success rounded-pill" disabled><i class="fas fa-plus-circle"></i>Add</button>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="row pb-4">
-            <div class="col">
-                <div class="card card-inverse card-success p-4">
-                    <label asp-for="@Model.Text" class="control-label">
-                        Description:
-                    </label>
-                    <textarea asp-for="@Model.Text" class="form-control"></textarea>
-                    <span asp-validation-for="@Model.Text" class="text-danger"></span>
-                </div>
-            </div>
-        </div>
+        </div>       
         <div class="modal fade" id="modal" tabindex="-1" role="dialog" aria-labelledby="modalLabel" aria-hidden="true">
             <div class="modal-dialog modal-lg" role="document">
                 <div class="modal-content">
@@ -163,7 +89,7 @@
             </div>
         </div>
         <button type="submit" class="btn btn-sm btn-success rounded-pill">
-            <i class="fas fa-check-circle"></i>Save
+            <i class="fas fa-check-circle"></i>Create
         </button>
     </form>
 </div>
