--- a/src/Web/RecipeBook.Web/Views/Ingredients/Index.cshtml
+++ b/src/Web/RecipeBook.Web/Views/Ingredients/Index.cshtml
@@ -15,5 +15,5 @@
 
 @section Scripts {
     <script src="~/js/ingredientIndexView.js" asp-append-version="true"></script>
-    <script src="~/js/sideBarView.js" asp-append-version="true"></script>
+    <script src="~/js/sideBar.js" asp-append-version="true"></script>
 }
