--- a/src/Web/RecipeBook.Web/Views/IngredientsSet/Edit.cshtml
+++ b/src/Web/RecipeBook.Web/Views/IngredientsSet/Edit.cshtml
@@ -23,5 +23,5 @@
 
     @section Scripts {
         <script src="~/js/ingredientsSetView.js" asp-append-version="true"></script>
-        <script src="~/js/sideBarView.js" asp-append-version="true"></script>
+        <script src="~/js/sideBar.js" asp-append-version="true"></script>
     }
