--- a/src/Web/RecipeBook.Web/Views/Recipe/Index.cshtml
+++ b/src/Web/RecipeBook.Web/Views/Recipe/Index.cshtml
@@ -70,7 +70,7 @@
                             </div>
                             <div class="row h-15">
                                 <div class="col-sm-6  col-lg-12 p-4">
-                                    <i class="far fa-clock"></i>60 min preparation time
+                                    <i class="far fa-clock"></i>@Model.PreparationTime preparation time
                                 </div>
                             </div>
                             <div class="row h-5">
